upload image finish+priview image jpg/jpeg finish

--- a/Pages/Suppliers/Index.cshtml
+++ b/Pages/Suppliers/Index.cshtml
@@ -59,7 +59,8 @@
                 @Html.DisplayFor(modelItem => item.Note)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                <img src="~/uploads/@Html.DisplayFor(modelItem => item.Image)" width="100px" height="120px" />
+
                 
             </td>
             <td>
