--- a/Pages/Suppliers/Create.cshtml
+++ b/Pages/Suppliers/Create.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
 
-                <input type="file" name="photo" id="pho1" asp-for="Supplier.Image"/>
+                <input type="file" name="photo" id="pho1" asp-for="Supplier.Image" accept = "image/jpeg,image/jpg"/>
                 <input asp-for="Supplier.Image" class="form-control" hidden id="pho2"/>
                 <span asp-validation-for="Supplier.Image" class="text-danger"></span>
             </div>
