--- a/Pages/Models/Index.cshtml
+++ b/Pages/Models/Index.cshtml
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Brand.BrandName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Image)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ModelID">Edit</a> |
