--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -87,9 +87,10 @@
                     <a class="dropdown-item" href="#">Employee</a>
                     <a class="dropdown-item" href="#">Network</a>
                     <a class="dropdown-item" href="/Brands/Index">Brand</a>
-                    <a class="dropdown-item" href="/Categorys/Index">Category</a>
+                    <a class="dropdown-item" href="/Categories/Index">Category</a>
                     <a class="dropdown-item" href="/Models/Index">Model</a>
                     <a class="dropdown-item" href="/Companys/Index">Company</a>
+                    <a class="dropdown-item" href="/Positions/Index">Position</a>
                     <a class="dropdown-item" href="/Departments/Index">Department</a>
                     <a class="dropdown-item" href="/Locations/Index" ">Location</a>
                     <a class="dropdown-item" href="/Suppliers/Index">Supplier</a>
