--- a/Pages/Positions/Delete.cshtml
+++ b/Pages/Positions/Delete.cshtml
@@ -4,31 +4,35 @@
 @{
     ViewData["Title"] = "Delete";
 }
+    <div id="content-wrapper">
+        <div class="container-fluid">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active">Asset Control</li>
+                <li class="breadcrumb-item active">Managment</li>
+                <li class="breadcrumb-item active">Position</li>
+            </ol>
+            <div class="card border-danger mb-auto">
+                <div class="card-header">Delete</div>
+                <div class="card-body text-dark" style="text-align:center">
+                    <p class="card-title">Are you sure you want to delete this?</p>
+                    <dl class="dl-horizontal">
+                        <dd>
+                            @Html.DisplayNameFor(model => model.Position.PositionName) : 
+                            @Html.DisplayFor(model => model.Position.PositionName)
+                        </dd>
+                        <dd>
+                            @Html.DisplayNameFor(model => model.Position.Status) : 
+                            @Html.DisplayFor(model => model.Position.Status)
+                        </dd>
+                    </dl>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Position</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Position.PositionName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Position.PositionName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Position.Status)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Position.Status)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Position.PositionID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
-</div>
+                    <form method="post">
+                        <input type="hidden" asp-for="Position.PositionID" />
+                        <a asp-page="./Index"><button type="button" class="btn btn-link">Back to List</button></a>
+                        <input style="margin-left:10px" type="submit" value="Delete" class="btn btn-outline-danger" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+       
