--- a/Pages/Positions/Index.cshtml
+++ b/Pages/Positions/Index.cshtml
@@ -5,38 +5,69 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Position[0].PositionName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Position[0].Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Position) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PositionName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.PositionID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.PositionID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.PositionID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div id="content-wrapper">
+    <div class="container-fluid">
+        <!-- Breadcrumbs-->
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active">Asset Control</li>
+            <li class="breadcrumb-item active">Managment</li>
+            <li class="breadcrumb-item active">Position</li>
+        </ol>
+        <!-- DataTables Example -->
+        <div class="card mb-3">
+            <div class="card-header">
+                <div class="dataTable_length">
+                    <i class="fas fa-table"> Position</i>
+                    <div style="float: right">
+                        <a asp-page="Create">
+                            <button type="button" class="btn btn-primary brands-modal">
+
+                                Create
+                            </button>
+                        </a>
+                        <!--<a class="btn btn-info" asp-page="Create">Create New</a>-->
+                        <button type="button" class="btn btn-info">Import data</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Position[0].PositionName)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Position[0].Status)
+                                </th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Position)
+                            {
+                                if (item.Status.Equals("Using"))
+                                { 
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.PositionName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Status)
+                                    </td>
+                                    <td width="100px">
+                                        <a asp-page="./Edit" asp-route-id="@item.PositionID">Edit</a> |
+                                        <a asp-page="./Delete" asp-route-id="@item.PositionID">Delete</a>
+                                    </td>
+                                </tr>
+                                }
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
